--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.15.4",
+    "express-session": "^1.15.6",
+    "express-validator": "^5.1.2",
     "mongoose": "^5.0.15",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
