Routes to db are working. Some style changes

--- a/client/package.json
+++ b/client/package.json
@@ -1,17 +1,24 @@
 {
-  "name": "client",
+  "name": "reactpractice2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "axios": "^0.18.0",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "cross-env REACT_APP_API_URL=http://localhost:3001 react-scripts start",
+    "build": "cross-env REACT_APP_API_URL=http://localhost:3001 react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "main": "index.js",
+  "license": "MIT",
+  "proxy": "http://localhost:3001/",
+  "devDependencies": {
+    "cross-env": "^5.1.4"
   }
 }
