--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "bcryptjs": "^2.4.3",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-router-dom": "^4.2.2",
@@ -11,7 +12,7 @@
   },
   "scripts": {
     "start": "cross-env REACT_APP_API_URL=http://localhost:3001 react-scripts start",
-    "build": "cross-env REACT_APP_API_URL=http://localhost:3001 react-scripts build",
+    "build": "cross-env REACT_APP_API_URL=http://localhost:3001 react-scripts",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
