--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "bcryptjs": "^2.4.3",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-parallax": "^1.7.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4"
   },
