--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.16.2",
     "express-validator": "^5.1.2",
     "mongoose": "^4.13.3",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "react-select": "^2.0.0-beta.2"
   }
 }
