--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "express-validator": "^5.1.2",
     "mongoose": "^4.13.3",
     "morgan": "^1.9.0"
