--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "express-session": "^1.15.6",
     "express-validator": "^5.1.2",
     "mongoose": "^4.13.3",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
