--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^4.1.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-parallax": "^1.7.0",
